<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>org.telosys</groupId> <!-- New group id for deployment on Sonatype servers -->
    <artifactId>telosys-tools-parent</artifactId>
    <version>3.x.x</version>

    <packaging>pom</packaging>
    <name>Telosys Tools</name>
    
    <properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<!-- <skip-license>true</skip-license> -->
		
		<!-- modules versions -->
		<telosys-tools-commons.version>3.0.0</telosys-tools-commons.version>
		<telosys-tools-generic-model.version>3.1.0</telosys-tools-generic-model.version>
		
		<telosys-tools-database.version>3.0.0</telosys-tools-database.version>
		<telosys-tools-repository.version>3.0.2</telosys-tools-repository.version>
		
		<telosys-tools-dsl-parser.version>3.1.0</telosys-tools-dsl-parser.version>
		
		<telosys-tools-generator-engine-velocity17.version>3.0.0</telosys-tools-generator-engine-velocity17.version>
		<telosys-tools-generator.version>3.1.0</telosys-tools-generator.version>
		
		<telosys-tools-api.version>3.1.0</telosys-tools-api.version>
    </properties>
    
    <modules>
        <module>../telosys-tools-commons</module>
        <module>../telosys-tools-generic-model</module>

        <module>../telosys-tools-database</module>
        <module>../telosys-tools-repository</module>

        <module>../telosys-tools-dsl-parser</module>

        <module>../telosys-tools-generator-engine-velocity17</module>
        <module>../telosys-tools-generator</module>
        
        <module>../telosys-tools-api</module>
        
        <!-- Special module to build the "uber jar" -->
        <module>../telosys-tools-all</module>
    </modules>

	<!-- 
		The UBER JAR "telosys-tools-X.X.X.jar" is built 
		by "maven-shade-plugin" in "telosys-tools-api" module (see "pom.xml")
		and available in the "dist" folder
	-->
	
	<profiles>
	
		<profile>
			<!-- Profile activated if the license file is in the current directory ( build at "parent" level )-->
			<id>parent-profile</id>
			<activation>
				<file>
					<exists>src/license/license-header.txt</exists>
				</file>
			</activation>
			<properties>
				<!-- <skip-license>false</skip-license> -->
				<license-file>src/license/license-header.txt</license-file>
			</properties>
		</profile>

		<profile>
			<!-- Profile activated if the license file is in the parent directory ( build at "module" level )-->
			<id>module-profile</id>
			<activation>
				<file>
					<exists>../telosys-tools-parent/src/license/license-header.txt</exists>
				</file>
			</activation>
			<properties>
				<!-- <skip-license>false</skip-license> -->
				<license-file>../telosys-tools-parent/src/license/license-header.txt</license-file>
			</properties>
		</profile>
		
	</profiles>

	<!-- Distribution Management configuration (used by the deploy plugin) -->
	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

    <dependencies>

        <!-- FOR TESTS -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.5.1</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>com.mycila.maven-license-plugin</groupId>
                <artifactId>maven-license-plugin</artifactId>
                <version>1.9.0</version>
                <configuration>
                	<!-- <skip>${skip-license}</skip> -->
                    <!-- <header>src/license/license-header.txt</header> -->
                    <header>${license-file}</header>
                    <includes>
                        <include>src/main/java/**</include>
                    </includes>
                    <strictCheck>true</strictCheck>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <!--
                            check  : verify if some files miss license header
                            format : add the license header when missing. If a header is existing, it is updated to the new one
                            remove : remove existing license header
                            -->
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            
			<plugin>
		        <groupId>org.sonatype.plugins</groupId>
		        <artifactId>nexus-staging-maven-plugin</artifactId>
		        <version>1.6.7</version> <!-- Last stable version / 2016 May -->
		        <extensions>true</extensions>
		        <configuration>
		          <!-- The server "id" element from settings to use authentication from -->
		          <serverId>ossrh</serverId>
		          <!-- nexusUrl = The Base URL of Nexus instance where we want to stage -->
		          <nexusUrl>https://oss.sonatype.org/</nexusUrl>
		          <description>${project.artifactId}-${project.version}</description>
		        </configuration>
		    </plugin>
		    
<plugin>
  <groupId>org.apache.maven.plugins</groupId>
  <artifactId>maven-surefire-plugin</artifactId>
  <configuration>
    <forkCount>3</forkCount>
    <reuseForks>true</reuseForks>
    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
  </configuration>
</plugin>

        </plugins>
    </build>

<!-- 
    <distributionManagement>
        <repository>
            <id>bintray-telosys-maven-TelosysTools</id>
            <name>telosys-maven-TelosysTools</name>
            <url>https://api.bintray.com/maven/telosys/maven/TelosysTools</url>
        </repository>
    </distributionManagement>
 -->

</project>
